# RustActixStarterWithWebSocketsAndReactCra

./: .gitignore  Cargo.toml  Makefile  NOTES.md  NOTES_STRUCTURE.md  README  README.md  backup.sh  build.rs  client.http
appjs/: package-lock.json
debian/: service
src/: errors.rs  lib.rs  main.rs  main.rs_old1_STATIC
src/app/: app_state.rs  constants.rs  errors.rs  mod.rs
src/dto/: mod.rs  post_input.rs  post_response.rs  post_ws_echo_request.rs  post_ws_echo_response.rs  web_socket_message.rs
src/routes/: mod.rs
src/routes/questions/: create.rs  mod.rs
src/types/: enums.rs
src/util/: util.rs
src/websocket/: mod.rs  server.rs
src_bak1/: constants.rs  lib.rs  websockets.rs
staticFiles/etc/ufw/applications.d/: rust-react-starter
