[package]
name = "starter"
version = "0.1.0"
authors = ["Mario Monteiro <marioammonteiro@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.0"
# actix-web = "3.3.2"
# actix-rt = "2.1.0"
actix = "0.10"
actix-web = "3"
# websockets"
actix-web-actors = "3"
# static files
actix-web-static-files = "3.0"

[build-dependencies]
actix-web-static-files = "3.0"
