[package]
name = "rust-react-starter"
version = "0.1.0"
authors = ["Mario Monteiro <marioammonteiro@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.0"
env_logger = "0.8.3"
dotenv = "0.9.0"
# actix-web = "3.3.2"
actix-rt = "2.1.0"
actix = "0.10.0"
actix-web = "3.2"
# websockets"
actix-web-actors = "3.0"
# static files
actix-web-static-files = "3.0"
# used in websocket sample only
actix-files = "0.5.0"
# serde
serde = "1.0.126"
serde_json = "1.0.64"
serde_derive = "1.0.126"
# serde = { version = "1.0.124", features = ["derive", "rc"] }
# serde_json = "1.0.64"
uuid = { version = "0.5", features = ["serde", "v4"] }

[build-dependencies]
actix-web-static-files = "3.0"
