[package]
name = "rust-react-starter"
version = "0.1.0"
authors = ["Mario Monteiro <marioammonteiro@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.0"
env_logger = "0.8.3"
dotenv = "0.9.0"
actix-web = { version = "3.3.2", features = ["openssl"] }
actix-rt = "2.2.0"
openssl = { version = "0.10" }
# websockets"
# dont' up to ^0.11.0 else we have the error the trait `actix::actor::Actor` is not implemented for `WebSocketSession`
# actix-web-actors 3.0 does not support actix 0.11. Use 0.10 instead
actix = "0.10.0"
actix-web-actors = "3.0"
# static files used in react
actix-web-static-files = "3.0"
# used in websocket sample only
actix-files = "0.5.0"
# serde
serde = "1.0.126"
serde_json = "1.0.64"
serde_derive = "1.0.126"
# serde = { version = "1.0.124", features = ["derive", "rc"] }
# serde_json = "1.0.64"
uuid = { version = "0.5", features = ["serde", "v4"] }
time = "0.2.26"
# futures = "0.3.5"
# futures-util = "0.3.5"
derive_more = "0.99.9"

[build-dependencies]
actix-web-static-files = "3.0"

[package.metadata.deb]
maintainer-scripts = "debian/"
maintainer = "Mario Monteiro <mario.monteiro@gmail.com>"
copyright = "2022, Critical-Links.com <mail@gmail.com>"
systemd-units = { enable = true }
depends = "$auto"
section = "utility"
priority = "optional"
# must be here, if is commented inside assets it will be used!!!
# ["staticFiles/etc/ufw/applications.d/c3-updater", "etc/ufw/applications.d/c3-updater", "644"],
assets = [
  # second argument is where the file will be copied, if is argument ends with / it will be inferred that the target is the directory where the file will be copied.
  ["target/release/rust-react-starter", "usr/share/rust-react-starter/rust-react-starter", "755"],
  ["config/ssl/*.pem", "usr/share/rust-react-starter/config/ssl/", "644"],
  ["README", "usr/share/rust-react-starter/README", "644"],
  ["config/config.json", "etc/rust-react-starter/config.json", "644"],
]
# define as config file, this files will not be replaced by re-installation
conf-files = [
  "/etc/rust-react-starter/config.json"
]
extended-description = """\
A systemd service and cli application for coordinate rust-react-starter \
with a rest api and websockets frontend to manage updates."""
# license=""
# license-file = ["LICENSE", "4"]
